# RAG_chatbot_Langchain_railway

./: pyproject.toml
app/: chain.py  server.py
